# practice

./: Cargo.toml
src/: main.rs
static/templates/: error.html
