[package]
name = "handle"
version = "0.1.0"
authors = ["jonhomin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde_json = "1.0"